examples/test/testpolicy8528.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8528
  namespace: namespace219
spec:
  podSelector:
    matchLabels:
      key49: value49
      key11: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value25
      podSelector:
        matchLabels:
          key0: value38
          key34: value31
